--- a/public/css/app.css
+++ b/public/css/app.css
@@ -472,6 +472,9 @@ video {
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }
+.container {
+  width: 100%;
+}
 .fixed {
   position: fixed;
 }
@@ -501,6 +504,9 @@ video {
 }
 .col-span-2 {
   grid-column: span 2 / span 2;
+}
+.col-auto {
+  grid-column: auto;
 }
 .col-start-3 {
   grid-column-start: 3;
@@ -566,8 +572,29 @@ video {
 .mt-\[em\] {
   margin-top: em;
 }
+.mt-5 {
+  margin-top: 1.25rem;
+}
+.ml-\[\] {
+  margin-left: ;
+}
+.ml-\[4em\] {
+  margin-left: 4em;
+}
+.mt-\[50\] {
+  margin-top: 50;
+}
+.mt-\[50vh\] {
+  margin-top: 50vh;
+}
+.mt-\[40vh\] {
+  margin-top: 40vh;
+}
 .box-border {
   box-sizing: border-box;
+}
+.block {
+  display: block;
 }
 .flex {
   display: flex;
@@ -641,6 +668,15 @@ video {
 .max-w-6xl {
   max-width: 72rem;
 }
+.max-w-\[\] {
+  max-width: ;
+}
+.max-w-\[75\] {
+  max-width: 75;
+}
+.max-w-\[75\%\] {
+  max-width: 75%;
+}
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
@@ -661,6 +697,12 @@ video {
 }
 .justify-center {
   justify-content: center;
+}
+.justify-items-center {
+  justify-items: center;
+}
+.self-center {
+  align-self: center;
 }
 .overflow-hidden {
   overflow: hidden;
@@ -738,6 +780,14 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
+.bg-gray-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
+}
+.bg-slate-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
+}
 .p-6 {
   padding: 1.5rem;
 }
@@ -758,6 +808,9 @@ video {
 .pt-8 {
   padding-top: 2rem;
 }
+.pt-5 {
+  padding-top: 1.25rem;
+}
 .text-left {
   text-align: left;
 }
@@ -772,8 +825,21 @@ video {
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
 .font-semibold {
   font-weight: 600;
+}
+.font-light {
+  font-weight: 300;
+}
+.font-black {
+  font-weight: 900;
+}
+.font-bold {
+  font-weight: 700;
 }
 .leading-7 {
   line-height: 1.75rem;
@@ -806,8 +872,21 @@ video {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
 .underline {
   text-decoration-line: underline;
+}
+.decoration-1 {
+  text-decoration-thickness: 1px;
+}
+.decoration-auto {
+  text-decoration-thickness: auto;
+}
+.decoration-8 {
+  text-decoration-thickness: 8px;
 }
 .antialiased {
   -webkit-font-smoothing: antialiased;
