--- a/public/css/app.css
+++ b/public/css/app.css
@@ -472,14 +472,8 @@ video {
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }
-.container {
-  width: 100%;
-}
 .fixed {
   position: fixed;
-}
-.absolute {
-  position: absolute;
 }
 .relative {
   position: relative;
@@ -490,38 +484,26 @@ video {
 .top-0 {
   top: 0px;
 }
-.col-span-4 {
-  grid-column: span 4 / span 4;
-}
-.col-span-6 {
-  grid-column: span 6 / span 6;
-}
-.col-span-7 {
-  grid-column: span 7 / span 7;
-}
 .col-span-12 {
   grid-column: span 12 / span 12;
 }
 .col-span-2 {
   grid-column: span 2 / span 2;
 }
-.col-auto {
-  grid-column: auto;
-}
-.col-start-3 {
-  grid-column-start: 3;
+.col-span-6 {
+  grid-column: span 6 / span 6;
 }
 .col-start-4 {
   grid-column-start: 4;
 }
-.float-right {
-  float: right;
-}
-.float-left {
-  float: left;
-}
 .m-auto {
   margin: auto;
+}
+.m-1 {
+  margin: 0.25rem;
+}
+.m-4 {
+  margin: 1rem;
 }
 .mx-auto {
   margin-left: auto;
@@ -554,47 +536,11 @@ video {
 .mt-8 {
   margin-top: 2rem;
 }
-.mt-1 {
-  margin-top: 0.25rem;
-}
-.mt-\[\] {
-  margin-top: ;
-}
-.mt-\[1\] {
-  margin-top: 1;
-}
 .mt-\[1em\] {
   margin-top: 1em;
 }
-.mt-\[\'em\'\] {
-  margin-top: 'em';
-}
-.mt-\[em\] {
-  margin-top: em;
-}
-.mt-5 {
-  margin-top: 1.25rem;
-}
-.ml-\[\] {
-  margin-left: ;
-}
-.ml-\[4em\] {
-  margin-left: 4em;
-}
-.mt-\[50\] {
-  margin-top: 50;
-}
-.mt-\[50vh\] {
-  margin-top: 50vh;
-}
 .mt-\[40vh\] {
   margin-top: 40vh;
-}
-.box-border {
-  box-sizing: border-box;
-}
-.block {
-  display: block;
 }
 .flex {
   display: flex;
@@ -617,18 +563,6 @@ video {
 .h-full {
   height: 100%;
 }
-.h-2 {
-  height: 0.5rem;
-}
-.h-10 {
-  height: 2.5rem;
-}
-.h-\[100\] {
-  height: 100;
-}
-.h-\[100\%\] {
-  height: 100%;
-}
 .min-h-screen {
   min-height: 100vh;
 }
@@ -644,35 +578,8 @@ video {
 .w-full {
   width: 100%;
 }
-.w-2 {
-  width: 0.5rem;
-}
-.w-10 {
-  width: 2.5rem;
-}
-.w-\[\] {
-  width: ;
-}
-.w-\[100\] {
-  width: 100;
-}
-.w-\[100\%\] {
-  width: 100%;
-}
-.w-\[0\%\] {
-  width: 0%;
-}
-.w-\[250\%\] {
-  width: 250%;
-}
 .max-w-6xl {
   max-width: 72rem;
-}
-.max-w-\[\] {
-  max-width: ;
-}
-.max-w-\[75\] {
-  max-width: 75;
 }
 .max-w-\[75\%\] {
   max-width: 75%;
@@ -689,38 +596,17 @@ video {
 .place-content-center {
   place-content: center;
 }
-.content-center {
-  align-content: center;
-}
 .items-center {
   align-items: center;
 }
 .justify-center {
   justify-content: center;
 }
-.justify-items-center {
-  justify-items: center;
-}
-.self-center {
-  align-self: center;
-}
 .overflow-hidden {
   overflow: hidden;
 }
 .rounded-lg {
   border-radius: 0.5rem;
-}
-.rounded {
-  border-radius: 0.25rem;
-}
-.rounded-\[\] {
-  border-radius: ;
-}
-.rounded-\[50\] {
-  border-radius: 50;
-}
-.rounded-\[50\%\] {
-  border-radius: 50%;
 }
 .rounded-l-lg {
   border-top-left-radius: 0.5rem;
@@ -733,69 +619,30 @@ video {
 .border {
   border-width: 1px;
 }
-.border-4 {
-  border-width: 4px;
-}
-.border-x {
-  border-left-width: 1px;
-  border-right-width: 1px;
-}
-.border-x-4 {
-  border-left-width: 4px;
-  border-right-width: 4px;
-}
-.border-y {
-  border-top-width: 1px;
-  border-bottom-width: 1px;
-}
 .border-t {
   border-top-width: 1px;
-}
-.border-l {
-  border-left-width: 1px;
-}
-.border-l-4 {
-  border-left-width: 4px;
 }
 .border-gray-200 {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
-.border-transparent {
-  border-color: transparent;
-}
-.border-black {
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
-}
 .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-.bg-gray-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }
 .bg-slate-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(30 41 59 / var(--tw-bg-opacity));
 }
-.p-6 {
-  padding: 1.5rem;
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 .p-2 {
   padding: 0.5rem;
 }
-.p-1 {
-  padding: 0.25rem;
+.p-6 {
+  padding: 1.5rem;
 }
 .px-6 {
   padding-left: 1.5rem;
@@ -808,14 +655,12 @@ video {
 .pt-8 {
   padding-top: 2rem;
 }
-.pt-5 {
-  padding-top: 1.25rem;
-}
-.text-left {
-  text-align: left;
-}
 .text-center {
   text-align: center;
+}
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 .text-lg {
   font-size: 1.125rem;
@@ -825,21 +670,8 @@ video {
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
 .font-semibold {
   font-weight: 600;
-}
-.font-light {
-  font-weight: 300;
-}
-.font-black {
-  font-weight: 900;
-}
-.font-bold {
-  font-weight: 700;
 }
 .leading-7 {
   line-height: 1.75rem;
@@ -882,12 +714,6 @@ video {
 .decoration-1 {
   text-decoration-thickness: 1px;
 }
-.decoration-auto {
-  text-decoration-thickness: auto;
-}
-.decoration-8 {
-  text-decoration-thickness: 8px;
-}
 .antialiased {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -897,35 +723,12 @@ video {
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-.hover\:box-border:hover {
-  box-sizing: border-box;
-}
-.hover\:box-content:hover {
-  box-sizing: content-box;
-}
 .hover\:border:hover {
   border-width: 1px;
-}
-.hover\:border-2:hover {
-  border-width: 2px;
-}
-.hover\:border-4:hover {
-  border-width: 4px;
-}
-.hover\:border-y:hover {
-  border-top-width: 1px;
-  border-bottom-width: 1px;
 }
 .hover\:border-black:hover {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
-}
-.hover\:border-inherit:hover {
-  border-color: inherit;
-}
-.hover\:bg-gray-400:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
 }
 .hover\:bg-gray-200:hover {
   --tw-bg-opacity: 1;
