--- a/public/css/app.css
+++ b/public/css/app.css
@@ -639,6 +639,12 @@ video {
 .-ml-1 {
   margin-left: -0.25rem;
 }
+.mt-10 {
+  margin-top: 2.5rem;
+}
+.mt-6 {
+  margin-top: 1.5rem;
+}
 .block {
   display: block;
 }
